XO_Project_UAT/Project--XOGrp--UAT/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Metro_Area_Picklist__c</fullName>
        <label>Metro Area Picklist</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Annapolis / Eastern Shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asheville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta / Macon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston (Includes Shore + 495 Ring)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Cod / Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central CA Coast (From Salinas to San Luis Obispo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central East Coast (St. Augustine - Port St. Lucie)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central FL (South of Orlando)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NJ (Includes Princeton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NJ Shore (North of LBI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charleston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte + Rock Hill SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlottesville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado Springs / Pueblo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas / Ft. Worth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware (Excludes Wilmington)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finger Lakes / Rochester / Syracuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida Keys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>The phone number field designed to capture a cell number for the company</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Need_to_Create_CB_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this field updated to True from False, create a Client Billing Case for the account.

            If the Past due balance reset to 0, uncheck this field
            If the account past due balance &gt;0 and Payment Type == ACH or CC and longest past due date is 8 days before today, check this field on batch BatchMoveCustomerToCreditHold
            If the account past due balance &gt;0 and Payment Type == Check and longest past due date is 15 days before today, check this field on batch BatchMoveCustomerToCreditHold</description>
        <label>Need to Create CB Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_to_Recalculate_Active_Hierarchy__c</fullName>
        <label>Need to Recalculate Active Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Negative_Disposition_Reason__c</fullName>
        <label>Negative Disposition Reason</label>
        <picklist>
            <controllingField>Account_Status__c</controllingField>
            <picklistValues>
                <fullName>Bad Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Required Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not My Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Wedding Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Neighborhood the vendor operaties in for Concierge sales</description>
        <label>Neighborhood</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams Morgan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allentown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altamonte Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altoona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​Amarillo​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anacostia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anderson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angelina/Tyler County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​Arlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asheville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic City Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin City Limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austinville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bald Head island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barclay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Days_Since_Last_Activity__c</fullName>
        <formula>LastActivityDate - TODAY()</formula>
        <label># of Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoteNotIn__c</fullName>
        <description>Details on why a vendor has placed their Concierge status on hold</description>
        <label>Notes for not including</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Of_Days_Since_Expiration__c</fullName>
        <description>Number of days since an account has been &apos;Active&apos;</description>
        <formula>TODAY() -  Expiration_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Of Days Since Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <description>Total number of rooms attached to this Account</description>
        <inlineHelpText>Total number of rooms attached to this Account</inlineHelpText>
        <label>Number of Rooms</label>
        <summaryForeignKey>Room__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operative_Eligible__c</fullName>
        <description>Identifies if the record meets the criteria for syncing into O1</description>
        <formula>IF(  AND(RecordType.Name = &quot;National&quot;,  NOT(ISPICKVAL(Active__c, &apos;&apos;)), NOT(ISPICKVAL(Type, &apos;&apos;))), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>An Account is Operative Eligible if it meets the following criteria:
            - Record Type = National
            - Active has a value
            - Type has a value</inlineHelpText>
        <label>Operative Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operative_ID__c</fullName>
        <description>Phase 1 National</description>
        <externalId>true</externalId>
        <label>Operative ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operative_Owner__c</fullName>
        <label>Operative Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Account_CBSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the CBSS associated with the Account should be updated if the account owner is updated.  Created by CSP-596</description>
        <inlineHelpText>If selected, allows for the Account CBSS field to be overridden to a different user than the Account Owner&apos;s CBSS.</inlineHelpText>
        <label>Override Account CBSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owned_By_Me__c</fullName>
        <formula>Owner.Id = $User.Id</formula>
        <label>Owned By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <description>First name and Last name of the Account owner concatenated
            Plan to Deprecated for CSP-2731</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390))+Owner.Id, Owner.LastName +&apos;,&apos;+Owner.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <formula>Owner.Title</formula>
        <label>Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Age__c</fullName>
        <description>The numbers of days since the last ownership change was made.Created by CSP-1852.</description>
        <formula>TODAY() - Ownership_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership_Changed_Date__c</fullName>
        <description>The date when the ownership was last changed related to Previous Owner Field.  Created by CSP-1852.</description>
        <label>Ownership Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartnersAccountId__c</fullName>
        <description>GUID for the parent account for a claimed storefront in TKPro&apos;s data structure</description>
        <externalId>true</externalId>
        <label>PartnersAccountId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnersProfileStatus__c</fullName>
        <description>Identifies the paid status of a storefront in TKPro</description>
        <label>Partners Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclaimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partners_Metadata__c</fullName>
        <description>The JSON response from partners</description>
        <label>Partners Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Due_Balance__c</fullName>
        <description>The total of all invoices that are past due</description>
        <label>Past Due Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if there are any invoice with outstanding balance associated with the customer..</description>
        <label>Past Due Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment Method the customer uses</description>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Preview_1__c</fullName>
        <formula>IF(ISBLANK(Photo_URL_1__c),&quot;&quot;,IMAGE(Photo_URL_1__c, &quot;Photo preview&quot;,85,85))</formula>
        <inlineHelpText>Preview of email photo</inlineHelpText>
        <label>Photo Preview 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Preview_2__c</fullName>
        <formula>IF(ISBLANK(Photo_URL_2__c),&quot;&quot;,IMAGE(Photo_URL_2__c, &quot;Photo preview&quot;,85,85))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Preview 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Preview_3__c</fullName>
        <formula>IF(ISBLANK(Photo_URL_3__c),&quot;&quot;,IMAGE(Photo_URL_3__c, &quot;Photo preview&quot;,85,85))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Preview 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_URL_1__c</fullName>
        <description>Related to Photo_Preview_1__c is the URL of the image that concierge wanted to add to storefronts</description>
        <inlineHelpText>Used in email merges</inlineHelpText>
        <label>Photo URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo_URL_2__c</fullName>
        <description>Related to Photo_Preview_2__c is the URL of the image that concierge wanted to add to storefronts</description>
        <label>Photo URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo_URL_3__c</fullName>
        <description>Related to Photo_Preview_3__c is the URL of the image that concierge wanted to add to storefronts</description>
        <label>Photo URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>IF( text(Local_Sales_Market__r.Country__c ) = &apos;CA&apos;, &apos;Senior Sales Executive&apos;, Text(Zip__r.Portfolio__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousOwner__c</fullName>
        <description>Previous Owner of the Account if the Owner has changed.  Created by CSP-1852</description>
        <label>Previous Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Hubspot_Formula__c</fullName>
        <description>To Copy down the Primary Category and Sync it to Hubspot. SF-2356
            Textual copy of the value of Primary Category and surface it on a Hubspot Record&apos;s Company section</description>
        <label>Primary Category Hubspot Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The main category that the account operates in</description>
        <label>Primary Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active primary Categories may be selected</errorMessage>
            <filterItems>
                <field>Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Registry_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead salesperson of the customer for Registry contracts</description>
        <label>Primary Registry Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Registry User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Specialist_Email__c</fullName>
        <formula>IF(ISBLANK(Local_Sales_Market__r.Print_Specialist__c),&quot;printspecialist@theknot.com&quot;,Local_Sales_Market__r.Print_Specialist__r.Email)</formula>
        <label>Print Specialist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Specialist_Phone__c</fullName>
        <formula>IF(ISBLANK(Local_Sales_Market__r.Print_Specialist__c),&quot;(402) 596-8489&quot;,Local_Sales_Market__r.Print_Specialist__r.Phone)</formula>
        <label>Print Specialist Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Specialist__c</fullName>
        <formula>if(isblank(Local_Sales_Market__r.Print_Specialist__c),&quot;Print Specialist&quot;,Local_Sales_Market__r.Print_Specialist__r.FirstName&amp;&apos; &apos; &amp;Local_Sales_Market__r.Print_Specialist__r.LastName)</formula>
        <label>Print Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privileged_Client_Feedback_Detail__c</fullName>
        <description>CSP-3220 Privileged text field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</description>
        <inlineHelpText>Sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition.  Please note that this information is attorney client privileged/confidential.</inlineHelpText>
        <label>Privileged Client Feedback Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privileged_Client_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-3220: Track vendors that have questions about the acquisition</description>
        <inlineHelpText>CSP-3220 Privileged field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</inlineHelpText>
        <label>Privileged Client Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <description>Phase 1 National</description>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot Couture Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentpole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen / Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>Indicates the types of services the vendor is paying for</description>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen / Data</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotional_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <label>Promotional Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <description>SS-4761
            Status of the prospect in the sales process
            Plan to Deprecated for CSP-2731</description>
        <label>Qualification Status(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Retain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the RSR of the Acct owner
            The RSR of the account owner which is supposed to be used by NVM to fill in data. Data was loaded by SS-3722.</description>
        <label>RSR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>RSR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsRSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RealWed__c</fullName>
        <description>Phase 1</description>
        <label>Real Weddings</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <description>Plan to Deprecated for CSP-2731
            SS-4761</description>
        <label>Reason Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReasonnotIn__c</fullName>
        <description>Phase 1
            Explanation of why a vendor has placed their Concierge status on hold</description>
        <label>Reason for not including</label>
        <picklist>
            <controllingField>ConciergePrgQua__c</controllingField>
            <picklistValues>
                <fullName>Bad reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain, bad reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a good fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Field used to map over the a converted Leads record type name and then appropriately assign the correct RecordTypeId before insert. Set to Long Area Text because of mapping issue error.
            Textual representation of the Record Type</description>
        <label>Record Type Name</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <description>External ID designed to allow users to use VLookup on accounts but we are now using CasesafeID for the most part.</description>
        <displayFormat>ACCT-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Phase 1
            Region the Concierge venue operates in</description>
        <label>Region</label>
        <picklist>
            <controllingField>ConciergeState__c</controllingField>
            <picklistValues>
                <fullName>Appalachian Plateau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Suburb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central East FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Pittsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central West FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal Plain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​Dallas/Fort Worth​</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionalNational__c</fullName>
        <label>Regional-National</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>